# swinUNETR

./: Inference.py  Parameters_Rigid.txt  README.md  SwinUNETRcpBRATS.py  SwinUNETRcpPretrain.py  TestMONAIcp.py  Train.py  pyproject.toml
Data/: Data.py  Dataloader.py  Extractor.py  ImageCheck.py  utils.py
Models/: Losses.py  MONAImodels.py  Training.py
