[tool.poetry]
name = "SSL4N"
version = "0.0.1"
description = "Self/Semi-Supervised Learning for Neonate Brain Segmentation"
authors = ["AustinTapp <atapp001@odu.edu>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "3.10"
pytorch-lightning = "1.7.3"
monai = "0.9.1"
jsonargparse = "4.13.0"
nibabel = "4.0.1"
scikit-image = "0.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
